# patent-processing-system

./: .gitignore  Cargo.toml  README.md  docker-cassandra-compose.yaml  docker-compose.yml  generator.js  load.yaml  token.txt
node_js/: app.js  package-lock.json  package.json
src/: main.rs
src/models/: mod.rs  patent.rs
src/routes/: mod.rs  patents.rs  requests.rs
src/services/: scylla.rs
