[package]
name = "patent-processing-system"
version = "0.1.0"
authors = ["aliakseidziadziuk"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.0.0"
actix-web = "2.0.0-alpha.6"

bytes = "0.4"
env_logger = "0.6"
cdrs = { version = "2.1" }
cdrs_helpers_derive = "0.3.0"
failure = "0.1.6"
serde = "1.0.104"
serde_json = "1.0.44"
